Fixed noti spacing

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2676,4 +2676,8 @@ aside nav small {
   margin-bottom: 5px;
 }
 
+#flashes ul {
+  padding-left: 0px;
+}
+
 /*# sourceMappingURL=main.css.map */
